--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
   "dependencies": {
     "express": "~4.16.0",
     "express-session": "^1.15.6",
-    "jade": "^1.11.0",
     "mongodb": "^2.2.33",
-    "morgan": "~1.9.0",
-    "supervisor": "^0.12.0"
+    "morgan": "~1.9.0"
   }
 }
